# HElib-basic

./: CMakeLists.txt  HElib summary.docx  README.md  dec.txt  matrix.txt
include/: MatrixUtility.h  encoding.h
source/: Baseline.cpp  CMakeLists.txt  MatrixUtility.cpp  data.cpp  data.h  encoding.cpp  encoding.h
test/: BootstrappingTest.cpp  CMakeLists.txt
